# quantization

./: .gitignore  Cargo.toml
.github/workflows/: rust-lint.yml  rust.yml
benches/: encode.rs
demos/: Cargo.toml  README.md  ann_benchmark_data.rs
demos/benches/: binary.rs  encode.rs  pq.rs
demos/src/: ann_benchmark.rs  ann_benchmark_data.rs  basic.rs  demo.rs  glove_100_angular.rs  random_data.rs  utils.rs
demos/src/metrics/: mod.rs  utils_avx2.rs  utils_neon.rs  utils_sse.rs
quantization/: Cargo.toml  build.rs
quantization/benches/: encode.rs  pq.rs
quantization/cpp/: avx2.c  neon.c  sse.c
quantization/src/: avx_scorer.rs  encoded_storage.rs  encoded_vectors.rs  encoded_vectors_binary.rs  encoded_vectors_pq.rs  encoded_vectors_u8.rs  encoder.rs  i8_encoder.rs  kmeans.rs  kmeans_1d.rs  kmeans_2d.rs  lib.rs  lut.rs  lut16_2_scorer.rs  lut16_scorer.rs  quantile.rs  scorer.rs  simple_scorer.rs  sse_scorer.rs  utils.rs  utils_avx2.rs  utils_neon.rs  utils_sse.rs
quantization/src/pq/: mod.rs  pq_vectors.rs
quantization/src/simd/: mod.rs
quantization/src/simd/avx2/: dot_u8.rs  manhattan_u8.rs  mod.rs
quantization/src/simd/sse2/: dot_u8.rs  manhattan_u8.rs  mod.rs  xor_popcnt.rs
quantization/tests/: empty_storage.rs  metrics.rs  stop_condition.rs  test_avx2.rs  test_binary.rs  test_neon.rs  test_pq.rs  test_simple.rs  test_sse.rs
src/: demo.rs  encoder.rs  lib.rs  lut.rs
tests/: knn.rs  simple_data.rs
