[package]
name = "quantization"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.4"
permutation_iterator = "0.1.2"
rand = "0.8.5"

[dependencies]
rkm = "0.8.1"
rand = "0.8.5"

hdf5 = "0.8.1"
ndarray = "0.15"
reqwest = { version = "0.11.13", features = ["blocking"] }
indicatif = "0.17.2"

[[bench]]
name = "encode"
harness = false

[[bin]]
name = "demo"
path = "demos/demo.rs"

[[bin]]
name = "glove_100_angular"
path = "demos/glove_100_angular.rs"
